nav overflow FIx

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@600&display=swap');
 .wrapperApp{
   width: 100%;
-  
+  overflow: hidden;
   background-color: #041122;
 }
 
